@@ -6,6 +6,7 @@ private:
     unsigned long last_activated;
     // not needed any more: unsigned long last_tested;
     unsigned long pause;
+    unsigned int nr_activations;
 
 protected:
     int state;
@@ -20,6 +21,9 @@ public:
     
     int get_state(void);
     void set_state(int state = 0, unsigned long pause = 0);
+    
+    unsigned long get_last_activated(void);
+    unsigned int get_nr_activations(void);
 };
 
 #endif
